--- a/.firebaserc
+++ b/.firebaserc
@@ -1,14 +1,5 @@
 {
-  "targets": {
-    "dev-mamba": {
-      "hosting": {
-        "wiki-search": [
-          "dev-mamba"
-        ]
-      }
-    }
-  },
   "projects": {
-    "default": "dev-mamba"
+    "default": "wiki-crm"
   }
 }
